--- a/index.html
+++ b/index.html
@@ -5,101 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Synergy Capital Investments</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background-color: #000;
-      color: #f1f1f1;
-    }
-    header {
-      background-color: #000;
-      color: #d4af37; /* gold accent */
-      text-align: center;
-      padding: 100px 20px 50px;
-    }
-    header h1 {
-      font-size: 3em;
-      margin: 0;
-      letter-spacing: 2px;
-    }
-    header p {
-      font-size: 1.5em;
-      margin-top: 10px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #111;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    nav a {
-      color: #d4af37;
-      text-decoration: none;
-      padding: 15px 20px;
-      display: block;
-    }
-    nav a:hover {
-      background-color: #222;
-    }
-    .carousel {
-      display: flex;
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
-    }
-    .carousel img {
-      width: 100%;
-      max-width: 500px;
-      scroll-snap-align: center;
-      margin: 20px;
-      border-radius: 8px;
-    }
-    section {
-      padding: 50px 20px;
-      text-align: center;
-    }
-    .contact-buttons a {
-      display: inline-block;
-      margin: 10px;
-      padding: 15px 25px;
-      background-color: #d4af37;
-      color: #000;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-    }
-    .contact-form {
-      max-width: 500px;
-      margin: 0 auto;
-      background-color: #111;
-      padding: 20px;
-      border-radius: 8px;
-    }
-    .contact-form input, .contact-form textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 4px;
-    }
-    .contact-form button {
-      background-color: #d4af37;
-      color: #000;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    footer {
-      background-color: #000;
-      color: #888;
-      text-align: center;
-      padding: 20px;
-    }
-  </style>
+  body {
+    margin: 0;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #000;
+    color: #f1f1f1;
+  }
+  header {
+    background-color: #000;
+    color: #d4af37; /* gold accent */
+  }
+  nav {
+    background-color: #111;
+  }
+  nav a {
+    color: #d4af37;
+  }
+  nav a:hover {
+    background-color: #222;
+  }
+  .contact-buttons a {
+    background-color: #d4af37;
+    color: #000;
+  }
+  .contact-form {
+    background-color: #111;
+  }
+  .contact-form button {
+    background-color: #d4af37;
+    color: #000;
+  }
+  footer {
+    background-color: #000;
+    color: #888;
+  }
+</style>
+🖌 Replace Colors (Black + Burgundy)
+Replace it with this:
+
+html
+Copy
+Edit
+<style>
+  body {
+    margin: 0;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #1a1a1a; /* deep charcoal instead of pure black */
+    color: #f1f1f1;
+  }
+  header {
+    background-color: #1a1a1a; /* deep charcoal */
+    color: #800020; /* burgundy accent */
+  }
+  nav {
+    background-color: #2b2b2b; /* softer black */
+  }
+  nav a {
+    color: #800020; /* burgundy links */
+  }
+  nav a:hover {
+    background-color: #3a3a3a; /* slightly lighter hover */
+  }
+  .contact-buttons a {
+    background-color: #800020; /* burgundy buttons */
+    color: #fff; /* white text */
+  }
+  .contact-form {
+    background-color: #2b2b2b; /* softer black */
+  }
+  .contact-form button {
+    background-color: #800020; /* burgundy send button */
+    color: #fff;
+  }
+  footer {
+    background-color: #1a1a1a; /* deep charcoal */
+    color: #bbb; /* softer footer text */
+  }
+</style>
 </head>
 <body>
   <header>
