--- a/index.html
+++ b/index.html
@@ -8,45 +8,38 @@
   body {
     margin: 0;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    background-color: #000;
+    background-color: #1a1a1a; /* deep charcoal instead of pure black */
     color: #f1f1f1;
   }
   header {
-    background-color: #000;
-    color: #d4af37; /* gold accent */
+    background-color: #1a1a1a; /* deep charcoal */
+    color: #800020; /* burgundy accent */
   }
   nav {
-    background-color: #111;
+    background-color: #2b2b2b; /* softer black */
   }
   nav a {
-    color: #d4af37;
+    color: #800020; /* burgundy links */
   }
   nav a:hover {
-    background-color: #222;
+    background-color: #3a3a3a; /* slightly lighter hover */
   }
   .contact-buttons a {
-    background-color: #d4af37;
-    color: #000;
+    background-color: #800020; /* burgundy buttons */
+    color: #fff; /* white text */
   }
   .contact-form {
-    background-color: #111;
+    background-color: #2b2b2b; /* softer black */
   }
   .contact-form button {
-    background-color: #d4af37;
-    color: #000;
+    background-color: #800020; /* burgundy send button */
+    color: #fff;
   }
   footer {
-    background-color: #000;
-    color: #888;
+    background-color: #1a1a1a; /* deep charcoal */
+    color: #bbb; /* softer footer text */
   }
 </style>
-🖌 Replace Colors (Black + Burgundy)
-Replace it with this:
-
-html
-Copy
-Edit
-<style>
   body {
     margin: 0;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
