--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
   <section id="property">
     <h2>Featured Property</h2>
     <div class="carousel">
-      <img src="images/residential/residential_1/photo1.jpg" alt="Property Photo 1">
-      <img src="images/residential/residential_1/photo2.jpg" alt="Property Photo 2">
-      <img src="images/residential/residential_1/photo3.jpg" alt="Property Photo 3">
-      <img src="images/residential/residential_1/photo4.jpg" alt="Property Photo 4">
-      <img src="images/residential/residential_1/photo5.jpg" alt="Property Photo 5">
-      <img src="images/residential/residential_1/photo6.jpg" alt="Property Photo 6">
-      <img src="images/residential/residential_1/photo7.jpg" alt="Property Photo 7">
-      <img src="images/residential/residential_1/photo8.jpg" alt="Property Photo 8">
+      <img src="home1.jpg" alt="Property Photo 1">
+      <img src="home2.jpg" alt="Property Photo 2">
+      <img src="home3.jpg" alt="Property Photo 3">
+      <img src="home4.jpg" alt="Property Photo 4">
+      <img src="home5.jpg" alt="Property Photo 5">
+      <img src="home6.jpg" alt="Property Photo 6">
+      <img src="home7.jpg" alt="Property Photo 7">
+      <img src="home8.jpg" alt="Property Photo 8">
     </div>
   </section>
 
