--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
       margin-top: 10px;
       color: #555;
     }
+    header .tagline {
+      font-size: 1.6em; /* bigger tagline */
+      margin-top: 20px;
+      margin-bottom: 20px;
+      color: #800020;
+      font-weight: 500;
+    }
     .contact-buttons a {
       display: inline-block;
       margin: 15px 10px;
@@ -111,8 +118,8 @@
 </head>
 <body>
   <header>
-    <h1>Synergy Capital Investments</h1>
-    <p>Commercial Spaces & Residential Deals Others Overlook</p>
+    <h1>Synergy Capital Investment</h1>
+    <p class="tagline">Helping you find the commercial and residential deals others miss</p>
     <p><strong>Call us for home buying, land buying, or commercial property buying and selling</strong></p>
     <div class="contact-buttons">
       <a href="tel:3053938112">Call: (305) 393-8112</a>
@@ -138,9 +145,12 @@
       <div class="swiper-button-prev"></div>
     </div>
   </section>
-
+  <section id="about">
+    <h2>About Us</h2>
+    <p>With over 30 years in the real estate industry, Synergy Capital Investments specializes in finding off-market deals that others overlook. Our dedication to client success has made us a trusted name in South Florida’s competitive market. Whether it’s residential, land acquisition, or commercial space, we bring decades of expertise and a commitment to excellence.</p>
+  </section>
   <section id="contact">
-    <h2>Inquiries</h2>
+    <h2>Let’s Talk About Your Next Property</h2>
     <p>For more information, please fill out the form below or contact us directly.</p>
     <div class="contact-form">
       <input type="text" placeholder="Your Name">
@@ -151,7 +161,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Synergy Capital Investments. All rights reserved.</p>
+    <p>&copy; 2025 Synergy Capital Investment. All rights reserved.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
