--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ nav ul li a:hover {
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <header> id="home"
+  <header> id="home">
     <h1>Synergy Capital Investment</h1>
     <p class="tagline">Helping you find the commercial and residential deals others miss</p>
     <p><strong>Call us for home buying, land buying, or commercial property buying and selling</strong></p>
