--- a/index.html
+++ b/index.html
@@ -175,10 +175,11 @@ nav ul li a:hover {
   margin-bottom: 20px;
 }
     .hero {
-  background: linear-gradient(135deg, #800020, #d4af37);
+  background: url('home1.jpg') no-repeat center center/cover;
   color: #fff;
   text-align: center;
   padding: 120px 20px;
+  position: relative;
 }
 .hero::after {
   content: '';
