--- a/index.html
+++ b/index.html
@@ -175,17 +175,10 @@ nav ul li a:hover {
   margin-bottom: 20px;
 }
     .hero {
-  background: url('home1.jpg') no-repeat center center/cover;
+  background-color: #800020; /* Solid Burgundy */
   color: #fff;
   text-align: center;
   padding: 120px 20px;
-  position: relative;
-}
-.hero::after {
-  content: '';
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
 }
 .hero-content {
   position: relative;
