--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ footer p {
     <p class="tagline">Helping you find the commercial and residential deals others miss</p>
     <div class="contact-buttons">
       <a href="tel:3053938112">Call: (305) 393-8112</a>
-      <a href="mailto:sysnergycapital@comcast.net">Email Us</a>
+      <a href="mailto:synergycapital@comcast.net">Email Us</a>
     </div>
   </div>
 </header>
