--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ footer p {
   </nav>
   <header id="home" class="hero">
   <div class="hero-content">
-    <h1>Synergy Capital Investments</h1>
+    <h1>Synergy Capital Investment</h1>
     <p class="tagline">Helping you find the commercial and residential deals others miss</p>
     <div class="contact-buttons">
       <a href="tel:3053938112">Call: (305) 393-8112</a>
@@ -262,7 +262,7 @@ footer p {
   </section>
   <section id="about">
     <h2>About Us</h2>
-    <p>With over 30 years in the real estate industry, Synergy Capital Investments specializes in finding off-market deals that others overlook. Our dedication to client success has made us a trusted name in South Florida’s competitive market. Whether it’s residential, land acquisition, or commercial space, we bring decades of expertise and a commitment to excellence.</p>
+    <p>With over 30 years in the real estate industry, Synergy Capital Investment specializes in finding off-market deals that others overlook. Our dedication to client success has made us a trusted name in South Florida’s competitive market. Whether it’s residential, land acquisition, or commercial space, we bring decades of expertise and a commitment to excellence.</p>
   </section>
   <section id="services">
     <h2>Our Services</h2>
@@ -293,7 +293,7 @@ footer p {
   </section>
 
   <footer>
-  <p>&copy; 2025 Synergy Capital Investments</p>
+  <p>&copy; 2025 Synergy Capital Investment</p>
   <p>Helping South Florida find exceptional properties for over 30 years.</p>
 </footer>
 
